--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<p>Testing...</p>
+<h3>StealCraft Alpha v1.0.1</h3>
+<p>Options Location Has Changed!</p>
+<p>Barrier Block Added to the Game</p>
+<p>Gameplay Section Added</p>
+<p>Error: The Game May Crash Due to a Problem in the Sound Library</p>
