--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<h3>StealCraft Alpha v1.0.1</h3>
-<p>Options Location Has Changed!</p>
-<p>Barrier Block Added to the Game</p>
-<p>Gameplay Section Added</p>
-<p>Error: The Game May Crash Due to a Problem in the Sound Library</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h3>StealCraft Alpha v1.0.1</h3>
+    <p>Options Location Has Changed!</p>
+    <p>Barrier Block Added to the Game</p>
+    <p>Gameplay Section Added</p>
+    <p>Error: The Game May Crash Due to a Problem in the Sound Library</p>
+</body>
+</html>
