--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Barrier Block Added to the Game</p>
     <p>Gameplay Section Added</p>
     <p>Error: The Game May Crash Due to a Problem in the Sound Library</p>
+    <br>
+    <div class="cop"><p>Emir Enes Games 2021-2023</p></div>
 </body>
 </html>
