--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>StealCraft News</title>
 </head>
 <body>
+    <h3>StealCraft Alpha v1.0.2 Build 20231113</h3>
+    <p>Change : </p>
+    <p>The Game Has Now Been Reset</p>
+    <p>You can no longer move arrows with the Tab key. There is a need for pedestrians</p>
+    <p>Added</p>
+    <p>Screen Capture feature added to the game (Key F2)</p>
+    <p>Chat and Player List are Now Available in Single Player</p>
+    <br>
     <h3>StealCraft Alpha v1.0.1</h3>
     <p>Options Location Has Changed!</p>
     <p>Barrier Block Added to the Game</p>
