--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Change : </p>
     <p>The Game Has Now Been Reset</p>
     <p>You can no longer move arrows with the Tab key. There is a need for pedestrians</p>
-    <p>Added</p>
+    <p>Added : </p>
     <p>Screen Capture feature added to the game (Key F2)</p>
     <p>Chat and Player List are Now Available in Single Player</p>
     <br>
