--- a/web/news.html
+++ b/web/news.html
@@ -6,6 +6,13 @@
     <title>StealCraft News</title>
 </head>
 <body>
+    <h3>StealCraft Alpha v1.0.2 Build 20231115</h3>
+    <p>Change : </p>
+    <p>World Size 1000x1000</p>
+    <p>Added : </p>
+    <p>Full Screen Key Added! (Key F11)</p>
+    <p>Main Menu Screen added</p>
+    <br>
     <h3>StealCraft Alpha v1.0.2 Build 20231113</h3>
     <p>Change : </p>
     <p>The Game Has Now Been Reset</p>
