--- a/web/news.html
+++ b/web/news.html
@@ -6,6 +6,10 @@
     <title>StealCraft News</title>
 </head>
 <body>
+    <h3>Emir Enes Games Store Now Becomes JarBox!</h3>
+    <p>I am aware that Emir Enes Games Stone is currently broken.</p>
+    <p>Everyone Will Use JarBox Now. New information coming soon!</p>
+    <br>
     <h3>StealCraft Alpha v1.0.2 Build 20231115</h3>
     <p>Change : </p>
     <p>World Size 1000x1000</p>
