--- a/web/news.html
+++ b/web/news.html
@@ -6,6 +6,8 @@
     <title>StealCraft News</title>
 </head>
 <body>
+    <h3>happy new year!</h3>
+    <br>
     <h3>New Game: Windows XP Simulator!</h3>
     <br>
     <h3>StealCraft Alpha v1.0.2 Build 20231115</h3>
