--- a/web/news.html
+++ b/web/news.html
@@ -6,6 +6,10 @@
     <title>StealCraft News</title>
 </head>
 <body>
+    <h3>New Program - JarBox!</h3>
+    <p>Change : </p>
+    <p>XP simulator and Space Game moved to Jarbox</p>
+    <br>
     <h3>happy new year!</h3>
     <br>
     <h3>New Game: Windows XP Simulator!</h3>
